--- a/site/contact.html
+++ b/site/contact.html
@@ -95,11 +95,9 @@
 									<a class="nav-link" href="contact.html">Contact</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">giant garden chess</a>
+									<a class="nav-link" href="blog.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">chess accessories</a>
-								</li>
+							
 							</ul>
 						</div>
 					</div>
@@ -325,7 +323,7 @@
 	<script src="assets/js/slick.js" type="text/javascript"></script>
 	<script src="assets/js/custom.js" type="text/javascript"></script>
 	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyfgK1Th-2V5QnKclTQWQUvEEtHk4-jmw"></script>
 	<script src="assets/js/google-map.js"></script>
 	<script src="assets/js/main.js"></script>
 </html>
