--- a/site/index.html
+++ b/site/index.html
@@ -89,11 +89,9 @@
 									<a class="nav-link" href="contact.html">Contact</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">giant garden chess</a>
+									<a class="nav-link" href="blog.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">chess accessories</a>
-								</li>
+							
 							</ul>
 						</div>
 					</div>
@@ -447,58 +445,7 @@
 				</div>
 			</section>
 			<!-- SECTION -->
-			<!-- INSTAGRAM -->
-			<section class="section-row">
-				<div class="container">
-					<div class="row-title text-center">
-						<h2>instagram</h2>
-					</div>
-					<div class="row no-gutters instagram-wrapper">
-						<div class="insta-text-box text-center">
-							<h3>The #makehappy Fanreel</h3>
-							<p>Tag your pictures on Instagram with #chessncrafts and get featured on our fanreel</p>
-							<a href="javascript:void(0);">view all posts</a>
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/1.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/2.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/3.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/4.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/1.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/2.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/3.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/4.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/1.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/2.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/3.jpg" />
-						</div>
-						<div class="col-sm-2">
-							<img src="assets/images/instagram/4.jpg" />
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- END INSTAGRAM -->
+		
 			<!-- FOOTER HIGHLIGHTER -->
 			<section class="footer-highlighters-section">
 				<div class="container-fluid">
