--- a/site/product-detail.html
+++ b/site/product-detail.html
@@ -91,11 +91,9 @@
 									<a class="nav-link" href="contact.html">Contact</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">giant garden chess</a>
+									<a class="nav-link" href="blog.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">chess accessories</a>
-								</li>
+							
 							</ul>
 						</div>
 					</div>
