--- a/site/blog.html
+++ b/site/blog.html
@@ -9,15 +9,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/easyzoom.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/icons.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto:40,100,300,700' rel='stylesheet' type='text/css'>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
 
 </head>
 
@@ -138,12 +132,12 @@
                             <h3>
                                 <a href="javascript:void(0);">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Risus quis varius quam quisque id
+                                        incididunt ut  id
                                         diam. Ipsum a arcu cursus vitae congue mauris rhoncus aenean vel. Ullamcorper
                                         sit amet risus nullam eget. </p>
 
                                     <span id="text1">Ipsum a arcu cursus vitae congue mauris. Facilisi nullam vehicula
-                                        ipsum a. Purus gravida quis blandit turpis cursus in hac habitasse platea. Amet
+                                        ipsum a.  Amet
                                         commodo nulla facilisi nullam vehicula ipsum a arcu. Amet est placerat in
                                         egestas erat imperdiet sed. Et pharetra pharetra massa massa ultricies.
                                         Elementum nisi quis eleifend quam adipiscing vitae proin sagittis.
@@ -174,13 +168,13 @@
                                 <a href="javascript:void(0);">
                                     <p>Lacus laoreet non curabitur gravida arcu ac tortor dignissim. Curabitur gravida
                                         arcu ac tortor. Augue lacus viverra vitae congue eu consequat. Donec enim diam
-                                        vulputate ut pharetra. Neque convallis a cras semper auctor. Sollicitudin
+                                        vulputate ut pharetra. Sollicitudin
                                         aliquam ultrices sagittis orci a scelerisque purus. .</p>
 
                                     <span id="text2">
                                         Facilisis magna etiam tempor orci eu lobortis elementum. Aliquam sem fringilla
                                         ut morbi tincidunt. Cursus eget nunc scelerisque viverra mauris. Morbi non arcu
-                                        risus quis varius quam quisque. Egestas purus viverra accumsan in. Nisl vel
+                                        risus quis varius quam quisque.
                                         pretium lectus quam id leo in vitae. Arcu odio ut sem nulla pharetra diam sit
                                     </span>
                                 </a>
@@ -277,7 +271,7 @@
 
                                     <span id="text5">
                                         empus urna et pharetra pharetra massa massa ultricies. Euismod nisi porta lorem
-                                        mollis aliquam ut. Pellentesque elit ullamcorper dignissim cras. Lectus
+                                        mollis aliquam ut.  dignissim cras. Lectus
                                         vestibulum mattis ullamcorper velit sed ullamcorper. Viverra accumsan in nisl
                                         nisi scelerisque.
                                     </span>
@@ -304,13 +298,12 @@
                                 <a href="javascript:void(0);">
                                     <p>Adipiscing diam donec adipiscing tristique risus nec. Id venenatis a condimentum
                                         vitae. Laoreet non curabitur gravida arcu ac tortor.In cursus turpis Amet
-                                        aliquam id diam maecenas ultricies mi massa tincidunt. Morbi tincidunt ornare
+                                        aliquam id diam maecenas ultricies. Morbi tincidunt ornare
                                         massa eget egestas purus viverra accumsan.</p>
 
                                     <span id="text6">
                                         Amet aliquam id diam maecenas ultricies mi eget. Fusce id velit ut tortor
                                         pretium
-                                        viverra suspendisse potenti nullam. Facilisis volutpat est velit egestas dui id
                                         ornare arcu. Ac tortor vitae purus faucibus ornare suspendisse. Donec et odio
                                         pellentesque diam volutpat. Ipsum dolor sit amet consectetur adipiscing elit
                                         duis
@@ -482,86 +475,7 @@
 
 </body>
 <script src="assets/js/jquery-3.3.1.min.js" type="text/javascript"></script>
-<script src="assets/js/popper.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/easyzoom.js" type="text/javascript"></script>
 <script src="assets/js/slick.js" type="text/javascript"></script>
 <script src="assets/js/custom.js" type="text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyfgK1Th-2V5QnKclTQWQUvEEtHk4-jmw"></script>
-<script src="assets/js/google-map.js"></script>
-<script src="assets/js/main.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-
-        $("#text1").slideUp();
-        $("#toggle1").click(function () {
-            var elem = $("#toggle1").text();
-            if (elem == "Read More") {
-                $("#toggle1").text("Read Less");
-                $("#text1").slideDown();
-            } else {
-                $("#toggle1").text("Read More");
-                $("#text1").slideUp();
-            }
-        });
-
-        $("#text2").slideUp();
-        $("#toggle2").click(function () {
-            var elem = $("#toggle2").text();
-            if (elem == "Read More") {
-                $("#toggle2").text("Read Less");
-                $("#text2").slideDown();
-            } else {
-                $("#toggle2").text("Read More");
-                $("#text2").slideUp();
-            }
-        });
-        $("#text3").slideUp();
-        $("#toggle3").click(function () {
-            var elem = $("#toggle3").text();
-            if (elem == "Read More") {
-                $("#toggle3").text("Read Less");
-                $("#text3").slideDown();
-            } else {
-                $("#toggle3").text("Read More");
-                $("#text3").slideUp();
-            }
-        });
-        $("#text4").slideUp();
-        $("#toggle4").click(function () {
-            var elem = $("#toggle4").text();
-            if (elem == "Read More") {
-                $("#toggle4").text("Read Less");
-                $("#text4").slideDown();
-            } else {
-                $("#toggle4").text("Read More");
-                $("#text4").slideUp();
-            }
-        });
-        $("#text5").slideUp();
-        $("#toggle5").click(function () {
-            var elem = $("#toggle5").text();
-            if (elem == "Read More") {
-                $("#toggle5").text("Read Less");
-                $("#text5").slideDown();
-            } else {
-                $("#toggle5").text("Read More");
-                $("#text5").slideUp();
-            }
-        });
-        $("#text6").slideUp();
-        $("#toggle6").click(function () {
-            var elem = $("#toggle6").text();
-            if (elem == "Read More") {
-                $("#toggle6").text("Read Less");
-                $("#text6").slideDown();
-            } else {
-                $("#toggle6").text("Read More");
-                $("#text6").slideUp();
-            }
-        });
-
-    });
-</script>
-
 </html>
