--- a/site/contact.html
+++ b/site/contact.html
@@ -6,13 +6,8 @@
 		<title>ChessNCrafts</title>
 		<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png" />
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-		<link rel="stylesheet" type="text/css" href="assets/css/easyzoom.css" />
-		<link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
-		<link rel="stylesheet" type="text/css" href="assets/css/icons.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />		
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
-		<link href='https://fonts.googleapis.com/css?family=Roboto:40,100,300,700' rel='stylesheet' type='text/css'>
-
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 	</head>
@@ -176,7 +171,7 @@
 											<span class="fa fa-map-marker"></span>
 										</div>
 										<div class="text">
-											<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+											<p><span>Address:</span> Pathankot Punjab, 145001 India</p>
 										</div>
 									</div>
 								</div>
@@ -186,7 +181,7 @@
 											<span class="fa fa-phone"></span>
 										</div>
 										<div class="text">
-											<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+											<p><span>Phone:</span> <a href="tel://9646702049">+ 91-9646702049</a></p>
 										</div>
 									</div>
 								</div>
@@ -196,7 +191,7 @@
 											<span class="fa fa-paper-plane"></span>
 										</div>
 										<div class="text">
-											<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a>
+											<p><span>Email:</span> <a href="mailto:shgopal1@gmail.com">shgopal1@gmail.com</a>
 											</p>
 										</div>
 									</div>
@@ -317,13 +312,7 @@
 		</footer>
 	</body>
 	<script src="assets/js/jquery-3.3.1.min.js" type="text/javascript"></script>
-	<script src="assets/js/popper.min.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="assets/js/easyzoom.js" type="text/javascript"></script>
-	<script src="assets/js/slick.js" type="text/javascript"></script>
-	<script src="assets/js/custom.js" type="text/javascript"></script>
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyfgK1Th-2V5QnKclTQWQUvEEtHk4-jmw"></script>
 	<script src="assets/js/google-map.js"></script>
-	<script src="assets/js/main.js"></script>
 </html>
