--- a/site/blog.html
+++ b/site/blog.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+          content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <title>ChessNCrafts</title>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/easyzoom.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/icons.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -26,12 +28,16 @@
                         <div class="topbar-nav">
                             <ul class="cls">
                                 <li>
-                                    <a href="tel:+919717066661"><i class="material-icons">phonelink_ring</i> +91 97170
-                                        66661</a>
+                                    <a href="tel:+919717066661">
+                                        <i class="material-icons">phonelink_ring</i> +91 97170
+                                        66661
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="mailto:info@chessncrafts.com:"><i class="material-icons">email</i>
-                                        info@chessncrafts.com</a>
+                                    <a href="mailto:info@chessncrafts.com:">
+                                        <i class="material-icons">email</i>
+                                        info@chessncrafts.com
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -40,12 +46,16 @@
                         <div class="topbar-nav">
                             <ul class="cls">
                                 <li>
-                                    <a href="tel:+919717066661"><i class="material-icons">phonelink_ring</i> +91 97170
-                                        66661</a>
+                                    <a href="tel:+919717066661">
+                                        <i class="material-icons">phonelink_ring</i> +91 97170
+                                        66661
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="mailto:info@chessncrafts.com"><i class="material-icons">email</i>
-                                        info@chessncrafts.com</a>
+                                    <a href="mailto:info@chessncrafts.com">
+                                        <i class="material-icons">email</i>
+                                        info@chessncrafts.com
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -60,11 +70,11 @@
                                     <a href="javascript:void(0);"><i class="material-icons">account_circle</i> login</a>
                                 </li>
                                 <li class="dropdown currency-dropdown">
-                                    <a href="javascript:void(0);" data-toggle="dropdown">usd <i
-                                            class="material-icons">expand_more</i></a>
+                                    <a href="javascript:void(0);" data-toggle="dropdown">Theme Color <i class="material-icons">expand_more</i></a>
                                     <ul class="dropdown-menu dropdown-menu-right">
-                                        <li><a href="javascript:void(0);">eur</a></li>
-                                        <li><a href="javascript:void(0);">gbp</a></li>
+                                        <li><a href="javascript:void(0); show_changecolor('#dc3545');">Red</a></li>
+                                        <li><a href="javascript:void(0); show_changecolor('#2e6ed5');">Blue</a></li>
+                                        <li><a href="javascript:void(0); show_changecolor('#117a8b');">Green</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -131,12 +141,15 @@
                         <div class="pro-thumb-details text-center">
                             <h3>
                                 <a href="javascript:void(0);">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                         incididunt ut  id
                                         diam. Ipsum a arcu cursus vitae congue mauris rhoncus aenean vel. Ullamcorper
-                                        sit amet risus nullam eget. </p>
+                                        sit amet risus nullam eget.
+                                    </p>
 
-                                    <span id="text1">Ipsum a arcu cursus vitae congue mauris. Facilisi nullam vehicula
+                                    <span id="text1">
+                                        Ipsum a arcu cursus vitae congue mauris. Facilisi nullam vehicula
                                         ipsum a.  Amet
                                         commodo nulla facilisi nullam vehicula ipsum a arcu. Amet est placerat in
                                         egestas erat imperdiet sed. Et pharetra pharetra massa massa ultricies.
@@ -166,10 +179,12 @@
                         <div class="pro-thumb-details text-center">
                             <h3>
                                 <a href="javascript:void(0);">
-                                    <p>Lacus laoreet non curabitur gravida arcu ac tortor dignissim. Curabitur gravida
+                                    <p>
+                                        Lacus laoreet non curabitur gravida arcu ac tortor dignissim. Curabitur gravida
                                         arcu ac tortor. Augue lacus viverra vitae congue eu consequat. Donec enim diam
                                         vulputate ut pharetra. Sollicitudin
-                                        aliquam ultrices sagittis orci a scelerisque purus. .</p>
+                                        aliquam ultrices sagittis orci a scelerisque purus. .
+                                    </p>
 
                                     <span id="text2">
                                         Facilisis magna etiam tempor orci eu lobortis elementum. Aliquam sem fringilla
@@ -180,9 +195,9 @@
                                 </a>
                             </h3>
                         </div>
-                        
-                            <button  id="toggle2">Read More</button>
-                        
+
+                        <button id="toggle2">Read More</button>
+
                     </div>
                 </div>
                 <div>
@@ -198,11 +213,13 @@
                         <div class="pro-thumb-details text-center">
                             <h3>
                                 <a href="javascript:void(0);">
-                                    <p>Commodo elit at imperdiet dui accumsan sit amet. Lectus nulla at volutpat diam ut
+                                    <p>
+                                        Commodo elit at imperdiet dui accumsan sit amet. Lectus nulla at volutpat diam ut
                                         venenatis tellus.
                                         Integer quis auctor elit sed vulputate mi. Nisi vitae suscipit tellus mauris a
                                         diam maecenas sed.
-                                        Justo eget magna fermentum iaculis eu non diam phasellus.</p>
+                                        Justo eget magna fermentum iaculis eu non diam phasellus.
+                                    </p>
 
                                     <span id="text3">
                                         Dolor purus non enim praesent elementum facilisis leo vel. Egestas egestas
@@ -231,7 +248,8 @@
                         <div class="pro-thumb-details text-center">
                             <h3>
                                 <a href="javascript:void(0);">
-                                    <p>At tellus at urna condimentum mattis pellentesque id nibh. Leo a diam
+                                    <p>
+                                        At tellus at urna condimentum mattis pellentesque id nibh. Leo a diam
                                         sollicitudin tempor id eu.Viverra accumsan in nisl nisi scelerisque. Id
                                         consectetur purus ut faucibus pulvinar. Elementum
                                         tempus egestas sed sed risus pretium quam vulputate. Erat nam at lectus urna.
@@ -263,7 +281,8 @@
                         <div class="pro-thumb-details text-center">
                             <h3>
                                 <a href="javascript:void(0);">
-                                    <p>At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Viverra
+                                    <p>
+                                        At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Viverra
                                         mauris in aliquam sem. Habitant morbi tristique senectus et. Purus viverra
                                         accumsan in nisl nisi scelerisque.Nunc eget lorem dolor sed viverra ipsum nunc.
                                         Vitae ultricies leo integer malesuada nunc
@@ -296,10 +315,12 @@
                         <div class="pro-thumb-details text-center">
                             <h3>
                                 <a href="javascript:void(0);">
-                                    <p>Adipiscing diam donec adipiscing tristique risus nec. Id venenatis a condimentum
+                                    <p>
+                                        Adipiscing diam donec adipiscing tristique risus nec. Id venenatis a condimentum
                                         vitae. Laoreet non curabitur gravida arcu ac tortor.In cursus turpis Amet
                                         aliquam id diam maecenas ultricies. Morbi tincidunt ornare
-                                        massa eget egestas purus viverra accumsan.</p>
+                                        massa eget egestas purus viverra accumsan.
+                                    </p>
 
                                     <span id="text6">
                                         Amet aliquam id diam maecenas ultricies mi eget. Fusce id velit ut tortor
@@ -475,7 +496,16 @@
 
 </body>
 <script src="assets/js/jquery-3.3.1.min.js" type="text/javascript"></script>
+<script src="assets/js/popper.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/easyzoom.js" type="text/javascript"></script>
 <script src="assets/js/slick.js" type="text/javascript"></script>
 <script src="assets/js/custom.js" type="text/javascript"></script>
+<script>
+    function show_changecolor(color) {
+        debugger;
+        document.getElementsByClassName('topbar')[0].style.background = color;
+
+    }
+</script>
 </html>
